# ffvademo

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
ext/: Makefile.am
ext/ffmpeg/: Makefile.am  libffva_ffmpeg.vers  sources.frag
src/: Makefile.am  egl_compat.h  ffmpeg_compat.h  ffmpeg_utils.c  ffmpeg_utils.h  ffvadecoder.c  ffvadecoder.h  ffvademo.c  ffvadisplay.c  ffvadisplay.h  ffvadisplay_priv.h  ffvafilter.c  ffvafilter.h  ffvarenderer.c  ffvarenderer.h  ffvarenderer_drm.c  ffvarenderer_drm.h  ffvarenderer_egl.c  ffvarenderer_egl.h  ffvarenderer_priv.h  ffvarenderer_x11.c  ffvarenderer_x11.h  ffvasurface.c  ffvasurface.h  sysdeps.h  vaapi_compat.h  vaapi_utils.c  vaapi_utils.h
